# fiducia-customer.rs

./: .cli-flags.toml  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  package.json  rust-toolchain.toml  shell
.github/: README.md  dependabot.yml
.github/workflows/: README.md  ci.yml  cli-flags.yml  deploy-test.yml  docker.yml
.nix/: README.md
assets/: customer.css
docs/: README.md  diagram.html  require-idempotency-wiring.md
scripts/: 2026-07-add-require-idempotency.sql  README.md  dpm-schema.sh  seed-customer.sql
src/: README.md  auth.rs  billing.rs  main.rs  store.rs  supabase_auth.rs  throttle.rs
src/entity/: api_keys.rs  audit_log.rs  billing_webhook_events.rs  customer_notifications.rs  customer_preferences.rs  customer_sessions.rs  mod.rs  sync_idempotency_keys.rs  users.rs
static/: 404.html  index.html
static/_astro/: Layout.BYWiVqtw.css
tests/: customer-browser-harness.mjs  customer-playwright.test.mjs  customer-puppeteer.test.mjs
