[package]
name = "fiducia-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace", "fs", "timeout", "limit", "catch-panic", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared OpenTelemetry + tracing setup (one init() for all services).
fiducia-telemetry = { git = "https://github.com/fiducia-cloud/fiducia-telemetry.rs", tag = "v0.1.0" }

[dev-dependencies]
# `ServiceExt::oneshot` drives the router in tests without binding a socket.
tower = { version = "0.5", features = ["util"] }
