# Crate manifest for fiducia-backend — the website-tier axum service. Pins the
# shared fiducia-* contract/telemetry/sync crates the whole platform speaks.
[package]
name = "fiducia-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maud = { version = "0.26", features = ["axum"] }
async-stream = "0.3"
tower-http = { version = "0.5", features = ["trace", "fs", "timeout", "limit", "catch-panic", "set-header"] }
# Verifies the customer's Supabase session by calling fiducia-auth `GET /v1/me`
# (the single source of truth for session verification), so /api/customer/*
# mutations are authenticated + org-scoped instead of open to the internet.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Typed ORM for the customer api_keys data access (over the existing sqlx pool).
# No migration tooling — the schema is declarative (fiducia-interfaces/sql).
sea-orm = { version = "1.1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared OpenTelemetry + tracing setup (one init() for all services).
fiducia-telemetry = { git = "https://github.com/fiducia-cloud/fiducia-telemetry.rs", tag = "v0.1.0" }

# Shared API payload/error contract (generated from fiducia-interfaces schemas) —
# the one source of truth for the types every fiducia service speaks.
fiducia-interfaces = { path = "../fiducia-interfaces/generated/rust" }

# Generated sqlx::FromRow row types for the customer Postgres plane. The api_keys
# vertical reads/writes these against the customer DB when DATABASE_URL is set.
fiducia-interfaces-db = { path = "../fiducia-interfaces/generated/rust-db" }

# The local-first sync protocol core (native build, no wasm). The server builds
# its `fiducia:sync` change frames and write-acks from THESE types, so the backend
# and the @fiducia/sync browser client share exactly one protocol definition.
fiducia-sync-core = { path = "../fiducia-sync" }

uuid = { version = "1", features = ["serde", "v4"] }
# Never persist a raw API-key secret — store only a SHA-256 hash of it.
sha2 = "0.10"

[dev-dependencies]
# `ServiceExt::oneshot` drives the router in tests without binding a socket.
tower = { version = "0.5", features = ["util"] }
# Test-only schema setup and seed helpers. Production database access goes
# exclusively through SeaORM's `DatabaseConnection`.
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
] }
